--- a/DevOps.Products.Website/Pages/ProductList.razor
+++ b/DevOps.Products.Website/Pages/ProductList.razor
@@ -15,9 +15,21 @@
 }
 else
 {
-	<input type="text" @bind-value="Name" @bind-value:event="oninput" placeholder="Search by name.."/>
-	<input type="text" @bind-value="Brand" @bind-value:event="oninput" placeholder="Search by brand.."/>
-	<input type="text" @bind-value="Category" @bind-value:event="oninput" placeholder="Search by category.."/>
+	<input type="text" @bind-value="SearchString" @bind-value:event="oninput" placeholder="Search..."/>
+	<select @bind="SelectedCategoryID">
+		<option></option>
+		@foreach (CategoryViewModel category in _productListViewModel.Categories)
+		{
+			<option value="@category.ID">@category.Name</option>
+		}
+	</select>
+	<select @bind="SelectedBrandID">
+		<option></option>
+		@foreach (BrandViewModel brand in _productListViewModel.Brands)
+		{
+			<option value="@brand.ID">@brand.Name</option>
+		}
+	</select>
 
 	<table class="table">
 		<thead>
@@ -44,36 +56,36 @@ else
 @code {
 	private ProductListViewModel _productListViewModel;
 
-	private string _name;
-	private int? _brand;
-	private int? _category;
+	private string _searchString;
+	private int? _selectedCategoryID;
+	private int? _selectedBrandID;
 
-	public string Name
+	public string SearchString
 	{
-		get => _name;
+		get => _searchString;
 		set
 		{
-			_name = value;
+			_searchString = value;
 			FilterProducts();
 		}
 	}
 
-	public int? Brand
+	public int? SelectedCategoryID
 	{
-		get => _brand;
+		get => _selectedCategoryID;
 		set
 		{
-			_brand = value;
+			_selectedCategoryID = value;
 			FilterProducts();
 		}
 	}
 
-	public int? Category
+	public int? SelectedBrandID
 	{
-		get => _category;
+		get => _selectedBrandID;
 		set
 		{
-			_category = value;
+			_selectedBrandID = value;
 			FilterProducts();
 		}
 	}
@@ -85,7 +97,7 @@ else
 
 	private async void FilterProducts()
 	{
-		_productListViewModel = await ProductListService.GetProductListViewModelsAsync(Name, Brand, Category);
+		_productListViewModel = await ProductListService.GetProductListViewModelsAsync(SearchString, SelectedCategoryID, SelectedBrandID);
 
 		this.StateHasChanged();
 	}
