--- a/DevOps.Products.Website/Pages/ProductList.razor
+++ b/DevOps.Products.Website/Pages/ProductList.razor
@@ -11,7 +11,7 @@
 
 <p>This component demonstrates fetching data from a service.</p>
 
-@if (_productListState.Products == null)
+@if (_productListState == null)
 {
 	<p><em>Loading...</em></p>
 }
