--- a/DevOps.Products.Website/Pages/Details/ProductDetails.razor
+++ b/DevOps.Products.Website/Pages/Details/ProductDetails.razor
@@ -62,18 +62,20 @@ else
 		</table>
 	}
 
-	<EditForm Model="@_productDetailsState.ReviewForm" OnValidSubmit="@SubmitReview">
+	<EditForm Model="@_reviewForm" OnValidSubmit="@SubmitReview">
 		<DataAnnotationsValidator/>
 		<ValidationSummary/>
 
-		<InputNumber @bind-Value="_productDetailsState.ReviewForm.Rating" placeholder="Add a rating..."/>
-		<InputText @bind-Value="_productDetailsState.ReviewForm.Text" placeholder="Write a review..."/>
+		<InputNumber @bind-Value="_reviewForm.Rating" placeholder="Add a rating..."/>
+		<InputText @bind-Value="_reviewForm.Text" placeholder="Write a review..."/>
 		<button type="submit">Submit</button>
 	</EditForm>
 }
 
 @code {
 	private ProductDetailsState _productDetailsState;
+
+	private ReviewViewModel _reviewForm = new ReviewViewModel();
 
 	[Parameter]
 	public string ProductID { get; set; }
@@ -85,8 +87,14 @@ else
 
 	private async void SubmitReview()
 	{
-		_productDetailsState.Reviews.Add(await ProductDetailsService.SubmitReview(_productDetailsState.ReviewForm));
-		//TODO Change how this works, in order to have more control over the state, perhaps refactor this whole web-sde of things.
+		_reviewForm.ProductID = _productDetailsState.Product.ID;
+		_reviewForm.Customer = _productDetailsState.Customer;
+
+		ReviewViewModel review = await ProductDetailsService.SubmitReview(_reviewForm);
+
+		_productDetailsState.Reviews.Add(review);
+		_reviewForm = new ReviewViewModel();
+
 		this.StateHasChanged();
 	}
 }
