--- a/DevOps.Products.Website/Pages/List/ProductList.razor
+++ b/DevOps.Products.Website/Pages/List/ProductList.razor
@@ -1,4 +1,4 @@
-﻿@page "/products"
+﻿@page "/"
 
 @using DevOps.Products.Website.Models.ViewModels
 @using DevOps.Products.Website.Models.ViewModels.ProductList
@@ -39,6 +39,8 @@ else
 				<th>Name</th>
 				<th>Category</th>
 				<th>Brand</th>
+				<th>Price</th>
+				<th>In Stock</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -48,6 +50,8 @@ else
 					<td>@product.Name</td>
 					<td>@product.CategoryName</td>
 					<td>@product.BrandName</td>
+					<td>£@product.Price.ToString("f2")</td>
+					<td>@product.InStock</td>
 					<td><a href="/products/@product.ID">Details</a></td>
 				</tr>
 			}
