--- a/DevOps.Products.Website/Pages/List/ProductList.razor
+++ b/DevOps.Products.Website/Pages/List/ProductList.razor
@@ -40,7 +40,7 @@ else
 				<th>Category</th>
 				<th>Brand</th>
 				<th>Price</th>
-				<th>In Stock</th>
+				<th>Stock</th>
 			</tr>
 		</thead>
 		<tbody>
