--- a/DevOps.Products.Website/Pages/ProductList.razor
+++ b/DevOps.Products.Website/Pages/ProductList.razor
@@ -21,15 +21,15 @@
 }
 else
 {
-	<input type="text" @bind-value="SearchString" @bind-value:event="oninput" placeholder="Search..." />
-	<select @bind="SelectedCategoryID">
+	<input id="SearchStringInput" type="text" @bind-value="SearchString" @bind-value:event="oninput" placeholder="Search..." />
+	<select id="CategorySelect" @bind="SelectedCategoryID">
 		<option></option>
 		@foreach (CategoryViewModel category in _categories)
 		{
 			<option value="@category.ID">@category.Name</option>
 		}
 	</select>
-	<select @bind="SelectedBrandID">
+	<select id="BrandSelect" @bind="SelectedBrandID">
 		<option></option>
 		@foreach (BrandViewModel brand in _brands)
 		{
@@ -39,14 +39,14 @@ else
 
 	<table id="ProductTable" class="table">
 		<thead>
-            <tr>
-                <th>Name</th>
-                <th>Category</th>
-                <th>Brand</th>
-                <th>Price</th>
+            <tr id="ProductTableHeaders">
+                <th id="ProductTableHeaderName">Name</th>
+                <th id="ProductTableHeaderCategory">Category</th>
+                <th id="ProductTableHeaderBrand">Brand</th>
+                <th id="ProductTableHeaderPrice">Price</th>
                 <AuthorizeView>
                     <Authorized>
-                        <th>Stock</th>
+                        <th id="ProductTableHeaderQuantity">Stock</th>
                     </Authorized>
                 </AuthorizeView>
             </tr>
@@ -54,31 +54,31 @@ else
 		<tbody>
 			@foreach (ProductViewModel product in _products)
 			{
-            <tr>
-                <td>@product.Name</td>
-                <td>@product.CategoryName</td>
-                <td>@product.BrandName</td>
-                <td>£@product.Price.ToString("f2")</td>
+            <tr id="@($"ProductRow{product.ID}")">
+                <td id="ProductRowName">@product.Name</td>
+                <td id="ProductRowCategory">@product.CategoryName</td>
+                <td id="ProductRowBrand">@product.BrandName</td>
+                <td id="ProductRowPrice">£@product.Price.ToString("f2")</td>
                 <AuthorizeView>
                     <Authorized>
                         @if (@context.User.IsInRole("Staff"))
                         {
-                            <td>@product.Quantity</td>
+                            <td id="ProductRowQuantity">@product.Quantity</td>
                         }
                         else if (@context.User.IsInRole("Customer"))
                         {
                             @if (product.Quantity > 0)
                             {
-                                <td>In Stock</td>
+                                <td id="ProductRowQuantity">In Stock</td>
                             }
                             else
                             {
-                                <td>Out of Stock</td>
+                                <td id="ProductRowQuantity">Out of Stock</td>
                             }
                         }
                     </Authorized>
                 </AuthorizeView>
-                <td><a id="@($"Product{product.ID}DetailsButton")" href="/products/@product.ID">Details</a></td>
+                <td><a id="@($"ProductRow{product.ID}DetailsButton")" href="/products/@product.ID">Details</a></td>
             </tr>
 			}
 		</tbody>
