--- a/DevOps.Products.Website/Pages/ProductList.razor
+++ b/DevOps.Products.Website/Pages/ProductList.razor
@@ -92,7 +92,7 @@ else
     private int? _selectedCategoryID;
     private int? _selectedBrandID;
 
-    private bool _isInitialized;
+    private bool _isInitialized {get;set;}
 
     public string SearchString
     {
